force-app/main/default/objects/T_Invoice_NewTemp__c/T_Invoice_NewTemp__c.object-meta.xml
<CustomObject>
    <label>T_Invoice_NewTemp</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>T_Invoice_Oct3</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_Invoice_NewTemp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>