force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_Tax__c</fullName>
    <label>Amount (Tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>