force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Deal_Id_OSA__c.field-meta.xml
<CustomField>
    <fullName>Deal_Id_OSA__c</fullName>
    <label>Deal Id/ OSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>