force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Filtered__c.field-meta.xml
<CustomField>
    <fullName>Filtered__c</fullName>
    <label>Filtered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>