force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type(Pro Service/Software)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>