force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>