force-app/main/default/objects/T_Invoice_NewTemp__c/fields/ROR_Date__c.field-meta.xml
<CustomField>
    <fullName>ROR_Date__c</fullName>
    <label>ROR Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>