force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Sales_Order_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Internal_ID__c</fullName>
    <label>Sales Order Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>