force-app/main/default/objects/T_Invoice_NewTemp__c/fields/T_Name__c.field-meta.xml
<CustomField>
    <fullName>T_Name__c</fullName>
    <label>T_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>