force-app/main/default/objects/T_Invoice_NewTemp__c/fields/T_OSA_text_for_Vlookup__c.field-meta.xml
<CustomField>
    <fullName>T_OSA_text_for_Vlookup__c</fullName>
    <label>T_OSA text for Vlookup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>