force-app/main/default/objects/T_Invoice_NewTemp__c/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <label>Term Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>